<resources>
    <string name="app_name">BeActiveJul2018</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_name_real">Be Active!</string>
    <string name="temp_text">Temp Text</string>
    <string name="factor1">Steps</string>
    <string name="factor2">Calories</string>
    <string name="factor3">Distance(KM)</string>
    <string name="yesterday">Yesterday</string>
    <string name="history">History</string>
    <string name="key">Key</string>
    <string name="good">good</string>
    <string name="great">great</string>
    <string name="ok">ok</string>
    <string name="bad">bad</string>
    <string name="amazing">amazing</string>
    <string name="channel_name">Bactive</string>
    <string name="channel_description">Bactive channel</string>
</resources>
